--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "porfoliowebsite",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ezequielmedina.github.io/AEMedina",
+  "homepage": "http://ezequielmedina.github.io/AEMedina/build",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
