--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "porfoliowebsite",
+  "name": "AEMedina",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://ezequielmedina.github.io/AEMedina/",
