--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chalk": "^4.1.2",
+    "exceljs": "^4.3.0",
+    "express": "^4.17.1",
     "gh-pages": "^3.2.3",
+    "mime-db": "^1.49.0",
+    "moment": "^2.29.1",
+    "ora": "^6.0.0",
+    "qrcode-terminal": "^0.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
@@ -19,7 +26,8 @@
     "react-scroll": "^1.8.3",
     "react-typewriter-effect": "^1.1.0",
     "typewriter": "^7.4.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "whatsapp-web.js": "^1.14.0"
   },
   "scripts": {
     "predeploy": "npm run build",
